--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 body {
     font-family: 'Pokemon GB', sans-serif;
 }
+
 h1 {
     font-size: 2rem;
 }
@@ -47,7 +48,7 @@ Github: https://github.com/raphaelfabeni/css-loader
 }
 
 .loader.is-active {
-    background-color:rgba(0,0,0,.85);
+    background-color:rgba(0,0,0,.5);
     width:100%;
     height:100%;
     left:0;
@@ -122,6 +123,7 @@ Github: https://github.com/raphaelfabeni/css-loader
 .pokedex-container {
     border-style: solid;
     width: 50%;
+    margin: 0 auto;
 }
 
 .pokedex-list {
@@ -143,9 +145,94 @@ Github: https://github.com/raphaelfabeni/css-loader
     border-style: none;
 }
 
+/* TEMP MODAL STYLING */
+
+#modal-container {
+    position: fixed;
+    padding: 20px;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    
+    /* to show it above other content */
+    z-index: 999; 
+    
+    /* to allow scrolling if the screen is not high enough*/
+    overflow: auto; 
+  
+    /* hides modal until button is clicked */
+    display: none;
+}
+  
+  #modal-container.is-visible {
+    display: grid;
+    text-align: center;
+  }
+  
+  .modal {
+    position: relative;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
+    box-sizing: border-box;
+    background: #fff;
+    max-width: 700px;
+    padding: 2rem;
+    width: 100%;
+    text-align: left;
+    border-radius: .5rem;
+  }
+  
+  .modal__image {
+      justify-self: center;
+      align-self: center;
+  }
+
+  .modal__details {
+    border-bottom: 2px solid black;
+  }
+
+  .modal__description {
+      grid-column: span 2;
+      align-self: center;
+  }
+
+  .modal__close {
+    outline: none;
+    border: 0;
+    background: none;
+  }
+
+  .modal__close:hover {
+      cursor: pointer;
+  }
+
+  .top-right {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+  }
+  
+  .modal h1 {
+    margin-top: 0;
+  }
+  
+  .modal p {
+    margin-bottom: 0;
+  }
+
 /* Media Queries */
 
 @media all and (max-width: 49em) {
+    h1 {
+        font-size: 1.5rem;
+        line-height: 1.3;
+    }
+
     body {
         margin: 1.25rem;
         line-height: 1.5;
@@ -160,4 +247,15 @@ Github: https://github.com/raphaelfabeni/css-loader
         margin-left: 0;
         text-align: center;
     }
+
+    .modal {
+        width: 100%;
+        padding: .5rem;
+    }
+
+    .top-right {
+        top: .2rem;
+        left: .2rem;
+    }
+
 }
