--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 /* Typography */
+
 @font-face {
     font-family: 'Pokemon GB';
     src: url('../files/pokemongb-raeo-webfont.woff2') format('woff2'),
@@ -12,119 +13,120 @@ body {
     font-family: 'Pokemon GB', sans-serif;
 }
 
-h1 {
+/* h1 {
     font-size: 2rem;
-}
+} */
 
 /* General Layout */
+
+/* * {
+    box-sizing: border-box;
+}
 
 body {
     margin: 2rem;
     line-height: 1.5;
     font-size: 1.25rem;
-}
+} */
 
 /*-------------------
 Loading Animation 
 Credit: Raphael Fabeni
 Github: https://github.com/raphaelfabeni/css-loader
 -------------------*/
+
 .loader {
-    color:#fff;
-    position:fixed;
-    box-sizing:border-box;
-    left:-9999px;
-    top:-9999px;
-    width:0;
-    height:0;
-    overflow:hidden;
-    z-index:999999;
+    color: #fff;
+    position: fixed;
+    box-sizing: border-box;
+    left: -9999px;
+    top: -9999px;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    z-index: 999999;
 }
 
-.loader:after,
-.loader:before {
-    box-sizing:border-box;
-    display:none;
+.loader:after, .loader:before {
+    box-sizing: border-box;
+    display: none;
 }
 
 .loader.is-active {
-    background-color:rgba(0,0,0,.5);
-    width:100%;
-    height:100%;
-    left:0;
-    top:0;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
 }
-.loader.is-active:after,
-.loader.is-active:before {
-    display:block;
+
+.loader.is-active:after, .loader.is-active:before {
+    display: block;
 }
 
 .loader-pokeball:before {
-    content:"";
-    position:absolute;
-    width:100px;
-    height:100px;
-    top:50%;
-    left:50%;
-    margin:-50px 0 0 -50px;
-    background:linear-gradient(180deg,red 42%,#000 0,#000 58%,#fff 0);
-    background-repeat:no-repeat;
-    background-color:#fff;
-    border-radius:50%;z-index:1;
-    animation:movePokeball 1s linear infinite both;
+    content: "";
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    top: 50%;
+    left: 50%;
+    margin: -50px 0 0 -50px;
+    background: linear-gradient(180deg, red 42%, #000 0, #000 58%, #fff 0);
+    background-repeat: no-repeat;
+    background-color: #fff;
+    border-radius: 50%;
+    z-index: 1;
+    animation: movePokeball 1s linear infinite both;
 }
 
 .loader-pokeball:after {
-    content:"";
-    position:absolute;
-    width:24px;
-    height:24px;
-    top:50%;
-    left:50%;
-    margin:-12px 0 0 -12px;
-    background-color:#fff;
-    border-radius:50%;
-    z-index:2;
-    animation:movePokeball 1s linear infinite both,flashPokeball .5s infinite alternate;
-    border:2px solid #000;
-    box-shadow:0 0 0 5px #fff,0 0 0 10px #000;
+    content: "";
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    top: 50%;
+    left: 50%;
+    margin: -12px 0 0 -12px;
+    background-color: #fff;
+    border-radius: 50%;
+    z-index: 2;
+    animation: movePokeball 1s linear infinite both, flashPokeball .5s infinite alternate;
+    border: 2px solid #000;
+    box-shadow: 0 0 0 5px #fff, 0 0 0 10px #000;
 }
 
 @keyframes movePokeball {
     0% {
-        transform:translateX(0) rotate(0);
+        transform: translateX(0) rotate(0);
     }
-    
     15% {
-        transform:translatex(-10px) rotate(-5deg);
+        transform: translatex(-10px) rotate(-5deg);
     }
-    
     30% {
-        transform:translateX(10px) rotate(5deg);
+        transform: translateX(10px) rotate(5deg);
     }
-    
     45% {
-        transform:translatex(0) rotate(0);
+        transform: translatex(0) rotate(0);
     }
 }
 
 @keyframes flashPokeball {
     0% {
-        background-color:#fff;
+        background-color: #fff;
     }
-
     to {
-        background-color:#fd0;
+        background-color: #fd0;
     }
 }
 
 /* Pokemon List */
 
+/*
 .pokedex-container {
     border-style: solid;
     width: 50%;
-    margin: 0 auto;
 }
+
 
 .pokedex-list {
     text-decoration: none;
@@ -143,87 +145,14 @@ Github: https://github.com/raphaelfabeni/css-loader
     padding: 1rem 0;
     margin: .1rem 2.5%;
     border-style: none;
+} */
+
+/* Modal Styling */
+
+.modal__image {
+    padding: 0;
 }
 
-/* TEMP MODAL STYLING */
-
-#modal-container {
-    position: fixed;
-    padding: 20px;
-    box-sizing: border-box;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    
-    /* to show it above other content */
-    z-index: 999; 
-    
-    /* to allow scrolling if the screen is not high enough*/
-    overflow: auto; 
-  
-    /* hides modal until button is clicked */
-    display: none;
-}
-  
-  #modal-container.is-visible {
-    display: grid;
-    text-align: center;
-  }
-  
-  .modal {
-    position: relative;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr 1fr;
-    box-sizing: border-box;
-    background: #fff;
-    max-width: 700px;
-    padding: 2rem;
-    width: 100%;
-    text-align: left;
-    border-radius: .5rem;
-  }
-  
-  .modal__image {
-      justify-self: center;
-      align-self: center;
-  }
-
-  .modal__details {
-    border-bottom: 2px solid black;
-  }
-
-  .modal__description {
-      grid-column: span 2;
-      align-self: center;
-  }
-
-  .modal__close {
-    outline: none;
-    border: 0;
-    background: none;
-  }
-
-  .modal__close:hover {
-      cursor: pointer;
-  }
-
-  .top-right {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-  }
-  
-  .modal h1 {
-    margin-top: 0;
-  }
-  
-  .modal p {
-    margin-bottom: 0;
-  }
 
 /* Media Queries */
 
@@ -232,30 +161,17 @@ Github: https://github.com/raphaelfabeni/css-loader
         font-size: 1.5rem;
         line-height: 1.3;
     }
-
     body {
         margin: 1.25rem;
         line-height: 1.5;
         font-size: 1rem;
     }
-
     .pokedex-container {
         width: 100%;
     }
-
     .pokedex-container h1 {
         margin-left: 0;
         text-align: center;
-    }
-
-    .modal {
-        width: 100%;
-        padding: .5rem;
-    }
-
-    .top-right {
-        top: .2rem;
-        left: .2rem;
     }
 
 }
